feat: complete logic lead and customer